jacoco + swagger onboard