@@ -54,6 +54,28 @@
             <artifactId>hibernate-validator</artifactId>
             <version>8.0.1.Final</version>
         </dependency>
+        <!-- Swagger UI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope></dependency>
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.7</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -76,7 +98,65 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+            <argLine>                    --illegal-access=permit
+            </argLine>
+                    <testFailureIgnore>true</testFailureIgnore>
+            <forkCount>2</forkCount>
+                    <reuseForks>true</reuseForks>
+            <argLine>${surefireArgLine}</argLine>
+                </configuration>
+        </plugin>
+            <plugin>
+            <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.7</version>
+                <executions>
+            <execution>
+                <id>default-prepare-agent</id>
+                <goals>
+                    <goal>prepare-agent</goal>
+                </goals>
+                <configuration>
+                    <destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>                            <propertyName>surefireArgLine</propertyName>
+                </configuration>
+            </execution>
+            <execution>
+                <id>default-report</id>
+                <phase>test</phase>
+                <goals>
+                    <goal>report</goal>
+                </goals>
+                <configuration>
+                    <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
+                    <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>                        </configuration>
+            </execution>
+                    <execution>
+            <id>default-check</id>
+                        <goals>
+            <goal>check</goal>
+                        </goals>
+            <configuration>
+                <rules>
+                <rule>
+                    <element>BUNDLE</element>
+                    <limits>
+                        <limit>
+                        <counter>COMPLEXITY</counter>                                            <value>COVEREDRATIO</value>
+                        <minimum>0.70</minimum>
+                        </limit>
+                    </limits>
+                </rule>
+            </rules>
+            </configuration>
+        </execution>
+                </executions>
+        </plugin>
         </plugins>
     </build>
+
 
 </project>
